Razorpay UI Clone

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- ! CSS -->
     <link rel="stylesheet" href="./main.css">
-
+    <link href="dist/output.css" rel="stylesheet">
 
     <!-- ! Our CSS -->
     <style>
